--- a/index.html
+++ b/index.html
@@ -69,39 +69,39 @@
         </section>
 
         <section id="services" class="services-section">
-            <h2 data-aos="fade-up" data-aos-duration="800">AI Security Suite</h2>
+            <h2>AI Security Suite</h2>
             <div class="features-grid">
-                <div class="feature-card" data-aos="flip-left" data-aos-delay="100" data-aos-duration="1000">
+                <div class="feature-card">
                     <h3>Prompt Injection Firewall</h3>
                     <p>Protect against unauthorized AI prompt manipulations</p>
                     <p class="feature-detail">Advanced protection system against AI-based attacks</p>
                 </div>
 
-                <div class="feature-card" data-aos="flip-left" data-aos-delay="200" data-aos-duration="1000">
+                <div class="feature-card">
                     <h3>AI-Driven Real-Time Risk Scoring</h3>
                     <p>Continuous risk assessment with AI insights</p>
                     <p class="feature-detail">Real-time monitoring and risk evaluation</p>
                 </div>
 
-                <div class="feature-card" data-aos="flip-left" data-aos-delay="300" data-aos-duration="1000">
+                <div class="feature-card">
                     <h3>Threat Intelligence Network</h3>
                     <p>On-Chain & Off-Chain Threat Intelligence</p>
                     <p class="feature-detail">Comprehensive security data integration</p>
                 </div>
 
-                <div class="feature-card" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
+                <div class="feature-card">
                     <h3>Autonomous AI Defense System</h3>
                     <p>Self-sufficient AI defense mechanisms</p>
                     <p class="feature-detail">24/7 automated security protection</p>
                 </div>
 
-                <div class="feature-card" data-aos="flip-left" data-aos-delay="500" data-aos-duration="1000">
+                <div class="feature-card">
                     <h3>Secure Agent Communication</h3>
                     <p>Verifiable Agent Authentication</p>
                     <p class="feature-detail">Ensuring secure and authenticated interactions</p>
                 </div>
 
-                <div class="feature-card" data-aos="flip-left" data-aos-delay="600" data-aos-duration="1000">
+                <div class="feature-card">
                     <h3>AI Agent Security Certificate</h3>
                     <p>Security & Compliance Standards</p>
                     <p class="feature-detail">Certified security standards for AI agents</p>
@@ -226,12 +226,30 @@ Status: BLOCKED ⚠️</code></pre>
             </div>
 
             <style>
+                /* Core Values 部分的布局优化 */
                 .core-values-section {
-                    padding: 8rem 2rem;
+                    padding: 8rem 2rem 12rem 2rem;
                     background-color: #000000;
                     color: #ffffff;
                     position: relative;
+                    width: 100vw;
+                    left: 50%;
+                    right: 50%;
+                    margin-left: -50vw;
+                    margin-right: -50vw;
                     overflow: hidden;
+                    margin-bottom: 0;
+                }
+
+                .core-values-section::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    background-color: #000000;
+                    z-index: 0;
                 }
 
                 .core-values-section h2 {
@@ -239,23 +257,37 @@ Status: BLOCKED ⚠️</code></pre>
                     margin-bottom: 6rem;
                     font-size: 2.5rem;
                     color: #ffffff;
+                    opacity: 0;
+                    transform: translateY(20px);
+                    animation: fadeInUp 0.8s ease forwards;
                 }
 
                 .values-container {
                     max-width: 1200px;
                     margin: 0 auto;
                     padding: 0 2rem;
+                    position: relative;
+                    z-index: 2;
                 }
 
                 .hex-row {
                     display: flex;
                     justify-content: center;
-                    margin-bottom: 2rem;
+                    margin-bottom: 4rem; /* 增加行间距 */
                     gap: 2rem;
+                    flex-wrap: wrap;
+                    opacity: 0;
+                    transform: translateY(30px);
+                    animation: fadeInUp 0.8s ease forwards 0.2s;
                 }
 
                 .hex-row.offset {
                     margin-top: -2rem;
+                    margin-bottom: 0; /* 移除最后一行的底部margin */
+                    padding-bottom: 2rem; /* 添加底部padding */
+                    opacity: 0;
+                    transform: translateY(30px);
+                    animation: fadeInUp 0.8s ease forwards 0.4s;
                 }
 
                 .hex-item {
@@ -264,6 +296,7 @@ Status: BLOCKED ⚠️</code></pre>
                     position: relative;
                     cursor: pointer;
                     transition: transform 0.3s ease;
+                    margin-bottom: 2rem; /* 添加项目间距 */
                 }
 
                 .hex-item:hover {
@@ -325,34 +358,59 @@ Status: BLOCKED ⚠️</code></pre>
                         width: 250px;
                         height: 290px;
                     }
-                    .hex-row {
-                        gap: 1.5rem;
-                    }
                 }
 
                 @media (max-width: 900px) {
+                    .core-values-section {
+                        padding: 6rem 2rem 8rem 2rem;
+                    }
+
                     .hex-row {
-                        flex-wrap: wrap;
-                        gap: 2rem;
+                        margin-bottom: 2rem;
+                        justify-content: center;
                     }
+
                     .hex-row.offset {
-                        margin-top: 2rem;
+                        margin-top: 0;
                     }
+
                     .hex-item {
                         width: 280px;
                         height: 320px;
+                        margin-bottom: 3rem; /* 增加移动端的项目间距 */
                     }
                 }
 
                 @media (max-width: 640px) {
+                    .core-values-section {
+                        padding: 4rem 1rem 6rem 1rem;
+                    }
+
+                    .values-container {
+                        padding: 0 1rem;
+                    }
+
                     .hex-item {
                         width: 100%;
                         height: auto;
                         aspect-ratio: 1;
                         max-width: 300px;
+                        margin-bottom: 2rem;
                     }
+
                     .hex-content {
                         padding: 1.5rem;
+                    }
+                }
+
+                @keyframes fadeInUp {
+                    from {
+                        opacity: 0;
+                        transform: translateY(30px);
+                    }
+                    to {
+                        opacity: 1;
+                        transform: translateY(0);
                     }
                 }
             </style>
@@ -527,35 +585,9 @@ Status: BLOCKED ⚠️</code></pre>
             disable: false
         });
 
-        // Enhanced scroll animation for AI Security Suite
-        function handleScroll() {
-            const servicesSection = document.querySelector('.services-section');
-            const featuresGrid = document.querySelector('.features-grid');
-            const featureCards = document.querySelectorAll('.feature-card');
-            
-            const triggerPoint = window.innerHeight * 0.8;
-
-            if (servicesSection) {
-                const sectionTop = servicesSection.getBoundingClientRect().top;
-                if (sectionTop < triggerPoint) {
-                    servicesSection.classList.add('visible');
-                    setTimeout(() => {
-                        featuresGrid.classList.add('visible');
-                        featureCards.forEach((card, index) => {
-                            setTimeout(() => {
-                                card.classList.add('visible');
-                            }, 100 * (index + 1));
-                        });
-                    }, 300);
-                }
-            }
-        }
-
         // Enhanced parallax scroll effect with performance optimization
         const parallaxElements = {
-            services: document.querySelector('.services-section'),
-            coreValues: document.querySelector('.core-values-section'),
-            threatScenario: document.querySelector('.use-case-section')
+            services: document.querySelector('.services-section')
         };
 
         let ticking = false;
@@ -590,35 +622,8 @@ Status: BLOCKED ⚠️</code></pre>
                 });
             }
 
-            if (parallaxElements.coreValues) {
-                const hexItems = parallaxElements.coreValues.querySelectorAll('.hex-item');
-                hexItems.forEach((item, index) => {
-                    const offset = (scrolled - item.offsetTop) * 0.08;
-                    item.style.transform = `translate3d(0, ${offset}px, 0)`;
-                });
-            }
-
-            if (parallaxElements.threatScenario) {
-                const timelineItems = parallaxElements.threatScenario.querySelectorAll('.timeline-item');
-                timelineItems.forEach((item, index) => {
-                    const offset = (scrolled - item.offsetTop) * 0.12;
-                    item.style.transform = `translate3d(0, ${offset}px, 0)`;
-                });
-            }
-
             ticking = false;
         }
-
-        // Optimized scroll event handler
-        window.addEventListener('scroll', function() {
-            lastScrollY = window.pageYOffset;
-            if (!ticking) {
-                window.requestAnimationFrame(() => {
-                    updateParallax();
-                });
-                ticking = true;
-            }
-        });
 
         // Smooth scroll for anchor links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
@@ -795,6 +800,12 @@ Status: BLOCKED ⚠️</code></pre>
                 overflow-x: auto;
                 white-space: pre-wrap;
                 word-break: break-word;
+            }
+
+            .timeline-item .code-block pre {
+                margin: 0;
+                font-size: 0.8rem;
+                line-height: 1.4;
             }
 
             .timeline-item .code-block pre {
@@ -1136,50 +1147,19 @@ Status: BLOCKED ⚠️</code></pre>
             }
         }
 
-        /* Enhanced parallax effects */
-        .services-section .feature-card,
-        .core-values-section .hex-item,
-        .use-case-section .timeline-item {
-            will-change: transform;
-            transition: transform 0.1s cubic-bezier(0.2, 0, 0.2, 1);
-            backface-visibility: hidden;
-        }
-
-        .services-section .feature-card {
-            transform-style: preserve-3d;
-            perspective: 1000px;
-        }
-
-        .core-values-section .hex-item {
-            transform-style: preserve-3d;
-            perspective: 1200px;
-        }
-
-        .use-case-section .timeline-item {
-            transform-style: preserve-3d;
-            perspective: 800px;
-        }
-
-        /* Optimize for mobile */
-        @media (max-width: 768px) {
-            .services-section .feature-card,
-            .core-values-section .hex-item,
-            .use-case-section .timeline-item {
-                transform: none !important;
-                transition: none !important;
-            }
-        }
-
-        /* AI Security Suite 进入动画效果 */
+        /* AI Security Suite 样式 */
         .services-section {
-            opacity: 0;
-            transform: translateY(50px);
-            transition: all 1s cubic-bezier(0.4, 0, 0.2, 1);
+            padding: 8rem 2rem;
+            background-color: #000000;
+            color: #ffffff;
+            position: relative;
         }
 
-        .services-section.visible {
-            opacity: 1;
-            transform: translateY(0);
+        .services-section h2 {
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 4rem;
+            color: #ffffff;
         }
 
         .features-grid {
@@ -1187,33 +1167,189 @@ Status: BLOCKED ⚠️</code></pre>
             grid-template-columns: repeat(3, 1fr);
             gap: 2rem;
             padding: 2rem;
-            opacity: 0;
-            transform: translateY(30px);
-            transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-            transition-delay: 0.3s;
-        }
-
-        .features-grid.visible {
-            opacity: 1;
-            transform: translateY(0);
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
         .feature-card {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+            background: rgba(1, 255, 255, 0.03);
+            border: 1px solid rgba(1, 255, 255, 0.1);
+            border-radius: 10px;
+            padding: 2rem;
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
-        .feature-card.visible {
-            opacity: 1;
-            transform: translateY(0);
+        .feature-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 0 30px rgba(1, 255, 255, 0.1);
+            background: rgba(1, 255, 255, 0.05);
+        }
+
+        .feature-card h3 {
+            color: #01ffff;
+            font-size: 1.4rem;
+            margin-bottom: 1rem;
+        }
+
+        .feature-card p {
+            color: rgba(255, 255, 255, 0.8);
+            margin-bottom: 1rem;
+            line-height: 1.6;
+        }
+
+        .feature-card .feature-detail {
+            font-size: 0.9rem;
+            color: rgba(255, 255, 255, 0.6);
+        }
+
+        @media (max-width: 1200px) {
+            .features-grid {
+                grid-template-columns: repeat(2, 1fr);
+                padding: 1rem;
+            }
         }
 
         @media (max-width: 768px) {
+            .services-section {
+                padding: 6rem 1rem;
+            }
+
             .features-grid {
                 grid-template-columns: 1fr;
-                padding: 1rem;
             }
+
+            .services-section h2 {
+                font-size: 2rem;
+                margin-bottom: 3rem;
+            }
+
+            .feature-card {
+                padding: 1.5rem;
+            }
+        }
+
+        /* Threat Scenario 部分的样式优化 */
+        .use-case-section {
+            padding: 8rem 2rem;
+            background-color: #000000;
+            color: #ffffff;
+            position: relative;
+            overflow: visible;
+        }
+
+        .scenario-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            position: relative;
+        }
+
+        .scenario-timeline {
+            display: flex;
+            flex-direction: column;
+            gap: 3rem;
+            padding: 2rem 0;
+        }
+
+        .timeline-item {
+            margin-bottom: 2rem;
+            position: relative;
+            z-index: 1;
+        }
+
+        .timeline-content {
+            background: rgba(1, 255, 255, 0.03);
+            border: 1px solid rgba(1, 255, 255, 0.1);
+            border-radius: 10px;
+            padding: 2rem;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .timeline-item.defense {
+            margin-top: 2rem;
+            margin-bottom: 0;
+        }
+
+        .protection-features {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 1.5rem;
+            margin-top: 1.5rem;
+        }
+
+        .protection-features .feature {
+            background: rgba(1, 255, 255, 0.05);
+            border: 1px solid rgba(1, 255, 255, 0.1);
+            border-radius: 8px;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        .protection-features .feature p {
+            color: #01ffff;
+            font-size: 0.9rem;
+            margin: 0;
+            line-height: 1.4;
+        }
+
+        @media (max-width: 768px) {
+            .use-case-section {
+                padding: 6rem 1rem;
+            }
+
+            .scenario-timeline {
+                gap: 2rem;
+            }
+
+            .protection-features {
+                grid-template-columns: 1fr;
+                gap: 1rem;
+            }
+
+            .timeline-item.defense {
+                margin-top: 1rem;
+            }
+
+            .timeline-content {
+                padding: 1.5rem;
+            }
+        }
+
+        /* Why On-Chain Security Matters 部分样式 */
+        .why-security-section {
+            padding: 8rem 2rem;
+            background-color: #000000;
+            color: #ffffff;
+            position: relative;
+            width: 100vw;
+            left: 50%;
+            right: 50%;
+            margin-left: -50vw;
+            margin-right: -50vw;
+            overflow: hidden;
+        }
+
+        .why-security-section h2 {
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 4rem;
+            color: #ffffff;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInUp 0.8s ease forwards;
+        }
+
+        .quotes-container {
+            opacity: 0;
+            transform: translateY(30px);
+            animation: fadeInUp 0.8s ease forwards 0.2s;
+        }
+
+        .security-stats {
+            opacity: 0;
+            transform: translateY(30px);
+            animation: fadeInUp 0.8s ease forwards 0.4s;
         }
     </style>
 </body>
