add team member info & gitbook

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="team.html">Team</a></li>
+                    <li><a href="https://league-of-agents.gitbook.io/league_of_agents/" target="_blank">Documentation</a></li>
                 </ul>
                 <a href="contact.html" class="waitlist-button">Join Waitlist</a>
             </div>
